...
 Conform to this protocol if you want your `NSViewController` subclass to work with `KSNavigationController`.
 */
protocol KSNavigationControllerCompatible {
    /**
     Navigation controller object which holds your `NSViewController` subclass.
     
     Warning: Do not set this properly by yourself.
     */
    var navigationController: KSNavigationController? {get set}
}

// MARK: KSNavigationController

...
